@@ -5,7 +5,9 @@ HISTORY
 1.2.15 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Remove images in data URIs on save.
+  Fixes https://dev.plone.org/ticket/13199
+  [khink]
 
 
 1.2.14 (2012-11-14)
